Add commonly used controlsfx classes
Modify some of the classes to not use internal JavaFX APIs